<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2">

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/layout"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:autofillHints="Calculator"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            android:labelFor="@id/layout" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="18sp"
            android:onClick="plus"
            android:textStyle="bold" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="minus"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/mulpitly"
            android:textAlignment="center"
            android:onClick="mul"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/divide"
            android:onClick="divide"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/clear"
            android:onClick="clearAll"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="showResult"
            android:text="@string/equals"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2">

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="toCreditLayout"
            android:text="@string/credit" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"  />

</LinearLayout>